--- a/views/posts/postsPage.ejs
+++ b/views/posts/postsPage.ejs
@@ -8,11 +8,26 @@
     <%- include('../include/head.ejs') %>
 </head>
 
-<body class="bg-white dark:bg-gray-800">
-    <%- include('../include/header.ejs') %>
-        <%- include('../include/postgrid.ejs') %>
 
+<body class="bg-white dark:bg-gray-800">
+
+
+
+
+
+    <%- include('../include/header.ejs') %>
+    <div id="grid-Wrapper " 
+    class="mt-8 w-full">
+
+    <%- include('../include/postgrid.ejs') %>
+      
+      
+    </div>
             <%- include('../include/footer.ejs') %>
 </body>
 
 </html>
+
+
+
+
