--- a/views/posts/postFormPage.ejs
+++ b/views/posts/postFormPage.ejs
@@ -16,7 +16,7 @@
   
 
   <form action="" class="w-full p-5 ml-5">
-    <input type="text" placeholder="제목을 입력해주세요" class="rounded-lg w-full h-16 text-4xl font-semibold    required">
+    <input id="postTitle" type="text" placeholder="제목을 입력해주세요" class="rounded-lg w-full h-16 text-4xl font-semibold    required">
   </form>
   <div class="border-t border-4 border-black w-24 mb-6 ml-10  "></div>
 
@@ -40,7 +40,7 @@
           </button>
         </li>
         <li >
-          <button class="">
+          <button onclick="insertPost()">
             <button type="button" class="text-white bg-sky-500 hover:bg-sky-600 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-300 dark:hover:bg-blue-700 focus:outline-none">Commit</button
           </button>
         </li>
@@ -87,8 +87,45 @@
 
 <!-- 게시물 등록 폼 -->
   <script>
-    async function savePost() {
+    async function insertPost() {
 
+      const postTitle = document.querySelector('#postTitle').value;
+      const postContent = document.getElementById('postContent').value;
+
+
+      if (editor.getMarkdown().length < 1) {
+        alert('본문을 입력해 주세요.')
+        throw new Error('Content is empty!');
+      }
+
+      console.log(editor.getMarkdown());
+      
+      // req.body : {postTitle, postContent},
+      // userId → 세션에서 가져오기
+      try {
+          const res = await axios({
+            method: 'post',
+            url: `/post`,
+            data: {
+              postTitle,
+              postContent,
+              userId
+            },
+          });
+
+          console.log(postTitle, postContent); 
+          console.log('res', res);
+
+          const { data } = res;
+          if (data) {
+            alert('게시 완료!');
+            document.location.href = '/';
+          }
+        } catch (error) {
+          console.error(error);
+        }
+      }
+    
     }
   </script>
 </body>
