--- a/views/posts/postDetailPage.ejs
+++ b/views/posts/postDetailPage.ejs
@@ -54,51 +54,7 @@
                         작성</button>
                 </div>
             </form>
-
-            <div id="comment-section">
-                <div class="flex justify-between">
-                    <div class="flex items-center mb-2">
-                        <p class="text-gray-700 font-semibold mr-2">
-                            닉네임
-                        </p>
-                        <p class="text-gray-600 text-sm">
-                            <%= comment.createdAt %>
-                        </p>
-                    </div>
-                    <div>
-                        <button id="edit-btn" type="button"
-                            class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-400">수정</button>
-                        <button id="delete-btn" type="button"
-                            class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded hover:bg-red-600">삭제</button>
-                    </div>
-                </div>
-                <p class="text-gray-600 pb-1">${comment.comContent}</p>
-                <% if (comment.replies && comment.replies.length> 0) { %>
-                    <ul>
-                        <% comment.replies.forEach(function(reply) { %>
-                            <li>
-                                <p>작성일: <%= reply.createdAt %>
-                                </p>
-                                <p>내용: <%= reply.comContent %>
-                                </p>
-                            </li>
-                            <% }); %>
-                    </ul>
-                    <% } %>
-            </div>
-            <div class="flex justify-between">
-                <div class="flex items-center mb-2">
-                    <p class="text-gray-700 font-semibold mr-2">닉네임</p>
-                    <p class="text-gray-600 text-sm">${new Date(comment.createdAt).toLocaleDateString()}</p>
-                </div>
-                <div>
-                    <button id="edit-btn" type="button"
-                        class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-400">수정</button>
-                    <button id="delete-btn" type="button"
-                        class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded hover:bg-red-600">삭제</button>
-                </div>
-            </div>
-
+            <div id="comment-section"></div>
         </main>
         <%- include('../include/footer.ejs') %>
 </body>
@@ -153,6 +109,25 @@
     }
 
     // <댓글>
+    // 페이지 로드 시 댓글 데이터 가져오기
+    window.addEventListener('load', async () => {
+        try {
+            const postId = '<%= post.postId %>';
+            const res = await axios({
+                method: 'get',
+                url: `/comment/list/${postId}`
+            });
+            // console.log('res', res);
+            const comments = res.data;
+            // console.log('comments>>', comments);
+            comments.forEach((comment) => {
+                addCommentElement(comment);
+            });
+        } catch (error) {
+            console.error('댓글 데이터 가져오기 실패:', error);
+        }
+    });
+
     // 댓글 작성 폼 선택
     const commentForm = document.getElementById('commentForm');
 
@@ -161,9 +136,7 @@
         event.preventDefault(); // 기본 폼 제출 동작 방지
 
         const commentText = document.getElementById('comment').value;
-        // console.log(commentText);
         const postId = '<%= post.postId %>';
-        // console.log(postId);
 
         try {
             // 댓글 작성 요청 보내기
@@ -175,10 +148,17 @@
                     comContent: commentText
                 }
             });
-            console.log('res', res);
+
             if (res.data.insertCom) {
-                // 댓글 작성 성공 시 동적으로 댓글 요소 추가
-                addCommentElement(res.data.insertCom);
+                // 댓글 작성 성공 시 서버에서 업데이트된 댓글 데이터 가져오기
+                const updatedComments = await axios({
+                    method: 'get',
+                    url: `/comment/list/${postId}`
+                })
+                updatedComments.data.forEach((comment) => {
+                    addCommentElement(comment);
+                });
+                console.log(comment);
                 commentForm.reset(); // 폼 초기화
             } else {
                 console.error('댓글 작성 실패:', res.data.error);
@@ -187,12 +167,13 @@
             console.error('댓글 작성 중 오류 발생:', error);
         }
     });
+
     // const currentUserId = document.body.getAttribute('data-current-user-id');
     // console.log(currentUserId);
 
     // 댓글 동작 추가 함수
     function addCommentElement(comment) {
-        console.log(comment);
+        // console.log(comment);
         const commentSection = document.getElementById('comment-section');
 
         // // "댓글이 없습니다." 메시지 숨김
@@ -200,15 +181,17 @@
         //     noComments.style.display = 'none';
         // }
 
-        const commentElement = document.createElement('li'); // commentElement = 댓글요소 li
+        // 댓글요소 li 생성
+        const commentElement = document.createElement('li');
         commentElement.classList.add(...['list-none', 'mb-4']); // commentElement에 클래스 추가
 
         // // 댓글 작성자와 로그인한 사용자가 동일할 때만 수정, 삭제 버튼 표시
         // // const isAuthor = commList.User.userId === currentUserId;
 
         commentElement.innerHTML = `
-            <div class="flex justify-between">
-                <div class="flex items-center mb-2">
+        <div class="bg-white rounded-lg shadow-md p-4 mb-4 mt-8">
+            <div class="flex justify-between items-center mb-2">
+                <div class="flex items-center">
                     <p class="text-gray-700 font-semibold mr-2">닉네임</p>
                     <p class="text-gray-600 text-sm">${new Date(comment.createdAt).toLocaleDateString()}</p>
                 </div>
@@ -223,7 +206,30 @@
                 <textarea class="w-full p-2 border rounded mb-2" placeholder="대댓글 입력"></textarea>
                 <button type="button" class="bg-green-500 text-white font-semibold py-1 px-3 rounded hover:bg-green-600">등록</button>
             </div>
-        `;
+        </div>
+        ${comment.replies && comment.replies.length > 0 ? `
+        <ul>
+            ${comment.replies.map(reply => `
+            <li>
+                <div class="bg-gray-100 rounded-lg shadow-md p-4 ml-8 mb-4">
+                    <div class="flex justify-between items-center mb-2">
+                        <div class="flex items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 mr-2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M16.49 12l3.75 3.75m0 0l-3.75 3.75m3.75-3.75H3.74V4.499" />
+                            </svg>
+                            <p class="text-gray-700 font-semibold mr-2">닉네임</p>
+                            <p class="text-gray-600 text-sm">${new Date(reply.createdAt).toLocaleDateString()}</p>
+                        </div>
+                        <div>
+                            <button id="edit-btn" type="button" class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-400">수정</button>
+                            <button id="delete-btn" type="button" class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded hover:bg-red-600">삭제</button>
+                        </div>
+                    </div>
+                    <p class="text-gray-600 pb-1">${reply.comContent}</p>
+                </div>
+            </li>`).join('')}
+        </ul>` : ''}
+    `;
 
         commentSection.appendChild(commentElement);
 
@@ -235,39 +241,39 @@
                 replyForm.classList.toggle('hidden');
             });
         });
-    }
+    };
 
-    // 댓글 삭제 버튼 클릭 이벤트 리스너 추가
-    const deleteCommentBtns = commentElement.querySelectorAll('#delete-btn');
-    deleteCommentBtns.forEach((btn) => {
-        btn.addEventListener('click', async () => {
-            const confirmDelete = confirm('댓글을 삭제하시겠습니까?');
-            if (confirmDelete) {
-                try {
-                    const commentId = btn.dataset.commentId;
-                    const res = await axios({
-                        method: 'patch',
-                        url: `/delete/${comId}`
-                    });
-                    // if (res.data.success) {
-                    //     // 댓글 삭제 성공 시 댓글 요소 제거
-                    //     btn.closest('li').remove();
-                    //     if (commentSection.children.length === 0) {
-                    //         // 마지막 댓글이 삭제된 경우 "댓글이 없습니다." 메시지 표시
-                    //         const noComments = document.createElement('p');
-                    //         noComments.id = 'no-comments';
-                    //         noComments.textContent = '댓글이 없습니다.';
-                    //         commentSection.appendChild(noComments);
-                    //     }
-                    // } else {
-                    //     console.error('댓글 삭제 실패:', res.data.error);
-                    // }
-                } catch (error) {
-                    console.error('댓글 삭제 중 오류 발생:', error);
-                }
-            }
-        });
-    });
+    // // 댓글 삭제 버튼 클릭 이벤트 리스너 추가
+    // const deleteCommentBtns = commentElement.querySelectorAll('#delete-btn');
+    // deleteCommentBtns.forEach((btn) => {
+    //     btn.addEventListener('click', async () => {
+    //         const confirmDelete = confirm('댓글을 삭제하시겠습니까?');
+    //         if (confirmDelete) {
+    //             try {
+    //                 const commentId = btn.dataset.commentId;
+    //                 const res = await axios({
+    //                     method: 'patch',
+    //                     url: `/delete/${comId}`
+    //                 });
+    //                 // if (res.data.success) {
+    //                 //     // 댓글 삭제 성공 시 댓글 요소 제거
+    //                 //     btn.closest('li').remove();
+    //                 //     if (commentSection.children.length === 0) {
+    //                 //         // 마지막 댓글이 삭제된 경우 "댓글이 없습니다." 메시지 표시
+    //                 //         const noComments = document.createElement('p');
+    //                 //         noComments.id = 'no-comments';
+    //                 //         noComments.textContent = '댓글이 없습니다.';
+    //                 //         commentSection.appendChild(noComments);
+    //                 //     }
+    //                 // } else {
+    //                 //     console.error('댓글 삭제 실패:', res.data.error);
+    //                 // }
+    //             } catch (error) {
+    //                 console.error('댓글 삭제 중 오류 발생:', error);
+    //             }
+    //         }
+    //     });
+    // });
 
     // // 댓글 수정 버튼 클릭시
     // const commentEditBtns = commentElement.querySelectorAll('.edit-btn');
