Design: Main Card UI

--- a/views/posts/postsPage.ejs
+++ b/views/posts/postsPage.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/880802bab5.js" crossorigin="anonymous"></script>
     <%- include('../include/head.ejs') %>
 </head>
 
