--- a/views/include/postgrid.ejs
+++ b/views/include/postgrid.ejs
@@ -1,35 +1,44 @@
-<div class=" book grid grid-cols-1 tems-stretch md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 md:gap-x-32 xl:gap-x-80  px-4 sm:px-6 lg:px-52 pt-20  lg:-ml-32 ">
+<section class="bg-coolGray-50 py-4">
+<div class="container px-4 mx-auto mt-8">
+<div class="flex flex-wrap m-5">
   <% postList.forEach(post=> { %>
-    <div class="group relative flex flex-col  min-w-60
-    w-full h-[330px] lg:w-[320px] xl:w-[320px] 
-   shadow-md hover:shadow-lg rounded-md overflow-hidden transform origin-bottom transition duration-400 hover:scale-105 p-5 ease-in  bg-gray-100 dark:bg-gray-500">
-    <!-- <div class="flex flex-col w-full bg-bg-element1 rounded-md shadow-md transition-all duration-250 ease-in hover:shadow-lg hover:scale-105"> -->
-      
-      <a href="/post/<%= post.postId %>">
-        <h2 class="tracking-tight text-gray-900 text-lg font-bold hover:underline block mb-2 dark:text-white">
-          <%= post.postTitle %>
-        </h2>
-      </a>
-      <div class="mt-4">
-        <h3 class="text-sm text-gray-700 line-clamp-3 dark:text-white">
-          <%= post.postContent.length> 100 ? post.postContent.slice(0, 100) + '...' : post.postContent %>
-        </h3>
-      </div>
-      <div class="border-t border-gray-300 pt-2  mt-auto">
-        <p class="font-medium  text-gray-500 text-sm mb-2 dark:text-white">by <%= post.User.userNick %>
-        </p>
-        <div class="flex justify-between items-center text-gray-400 text-xs mt-1 dark:text-white">
-          <span>
-            <%= new Date(post.createdAt).toLocaleDateString() %>
-          </span>
-          <div class="flex space-x-2">
-            <span>조회수: <%= Math.floor(Math.random() * 1000) %></span>
-            <span>댓글수: <%= post.commentCount %></span>
+    <div class="w-full  md:w-1/2 lg:w-1/3 xl:w-1/4 p-3  ">
+      <div class="w-full p-3">
+        <div class=" border border-coolGray-100 shadow-dashboard rounded-md 
+          h-[330px] shadow-lg hover:shadow-xl overflow-hidden transform origin-bottom transition duration-400 hover:scale-105  ease-in 
+         dark:bg-gray-500 min-w-60 relative">
+          <div class="flex flex-col justify-center items-center px-4 pt-8 pb-6 ">
+            <a href="/post/<%= post.postId %>">
+                <h2 class="tracking-tight text-gray-900 text-lg font-bold hover:underline block mb-2 dark:text-white">
+                    <%= post.postTitle %>
+                </h2>
+            </a>
+            <div class="mt-4">
+                <h3 class="text-sm text-gray-700 line-clamp-3 dark:text-white">
+                    <%= post.postContent.length> 100 ? post.postContent.slice(0, 100) + '...' : post.postContent %>
+                </h3>
+            </div>
+            <div class="absolute	bottom-5 border-t border-gray-300 pt-2 mt-auto  ">    
+              <div class="items-center  text-gray-400 text-xs mt-1 dark:text-white">
+                <div class="flex space-x-2">
+                  <span class="font-medium  text-gray-400 text-sm  dark:text-white">Dependency by <%= post.User.userNick %></span>
+                </div>
+                <div class="flex space-x-2"">
+                  <span>
+                    <%= new Date(post.createdAt).toLocaleDateString() %>
+                  </span>
+                  <span class="absolute right-2 text-gray-400 text-xs  dark:text-white">
+                    <%= post.commentCount %>
+                    <i class="fa-solid fa-heart"></i>777
+                  </span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <% }); %>
+  <% }); %>
 </div>
-
-
+</div>
+</section>
