Design: Card moving Animation

--- a/views/posts/postsPage.ejs
+++ b/views/posts/postsPage.ejs
@@ -7,6 +7,29 @@
     <title>Document</title>
     <script src="https://kit.fontawesome.com/880802bab5.js" crossorigin="anonymous"></script>
     <%- include('../include/head.ejs') %>
+    <style>
+        .card {
+            opacity: 0;
+            transform: translateY(-50px);
+            animation: slideUpDown 1s ease-in-out forwards;
+        }
+
+        @keyframes slideUpDown {
+            0% {
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+            50% {
+                opacity: 1;
+                transform: translateY(50px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+    </style>
 </head>
 
 
