--- a/views/include/postgrid.ejs
+++ b/views/include/postgrid.ejs
@@ -2,7 +2,7 @@
 <div class="container px-4 mx-auto mt-8">
 <div class="flex flex-wrap m-5">
   <% postList.forEach(post=> { %>
-    <div class="w-full  md:w-1/2 lg:w-1/3 xl:w-1/4 p-3  ">
+    <div class="card w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-3  ">
       <div class="w-full p-3">
         <div class=" border border-coolGray-100 shadow-dashboard rounded-md 
           h-[330px] shadow-lg hover:shadow-xl overflow-hidden transform origin-bottom transition duration-400 hover:scale-105  ease-in 
@@ -18,7 +18,7 @@
                     <%= post.postContent.length> 100 ? post.postContent.slice(0, 100) + '...' : post.postContent %>
                 </h3>
             </div>
-            <div class="absolute	bottom-5 border-t border-gray-300 pt-2 mt-auto  ">    
+            <div class="absolute bottom-5 border-t border-gray-300 pt-2 mt-auto  ">    
               <div class="items-center  text-gray-400 text-xs mt-1 dark:text-white">
                 <div class="flex space-x-2">
                   <span class="font-medium  text-gray-400 text-sm  dark:text-white">Dependency by <%= post.User.userNick %></span>
